--- a/popup.html
+++ b/popup.html
@@ -26,10 +26,11 @@
 		</style>
 	</head>
 	<body>
-		<div id="addonStateImage"></div>
 		<p style="text-align:center">
 			Currently the RS Wiki Redirector extension is <span id="addonStateDescriptor">disabled</span>.
 		</p>
+		<div id="addonStateImage"></div>
+		<input type="checkbox" name="hideWikia" id="hideWikiaCheck" /> Hide Wikia results in search
 		<script type="text/javascript" src="popup.js"></script>
 	</body>
 </html>
