Now search results will be properly hidden if they go to the old wiki. Thanks to RMHonor.
Results removed will be replaced with "RS Wikia search result remove by RS Wiki Redirector."

Currently this feature is off by default, this may change in a future update.

Signed-off-by: proEndreeper <devon.schneider+gpg@outlook.com>

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,8 @@
 				width:200px;
 				height:275px;
 				overflow:hidden;
+				font-family: "Segoe UI", Tahoma, sans-serif;
+				font-size:75%;
 			}
 			p {
 				margin:0;
@@ -23,14 +25,19 @@
 				background-position:center;
 				background-image:url("powerbutton_off.png");
 			}
+			#addonStateSearch {
+				margin:auto;
+			}
 		</style>
 	</head>
 	<body>
+		<div id="addonStateImage"></div>
 		<p style="text-align:center">
 			Currently the RS Wiki Redirector extension is <span id="addonStateDescriptor">disabled</span>.
 		</p>
-		<div id="addonStateImage"></div>
-		<input type="checkbox" name="hideWikia" id="hideWikiaCheck" /> Hide Wikia results in search
+		<div id="addonStateSearch">
+			<input type="checkbox" name="hideWikia" id="hideWikiaCheck" /> Hide Wikia results in search
+		</div>
 		<script type="text/javascript" src="popup.js"></script>
 	</body>
 </html>
